--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
-.App {
-  text-align: center;
-}
+:root {
+  /* Primary theme */
+  --Lime-Green: hsl(163, 72%, 41%);
+  --Bright-Red: hsl(356, 69%, 56%);
+  --Facebook: hsl(208, 92%, 53%);
+  --Twitter: hsl(203, 89%, 53%);
+  --Instagram: linear-gradient(45deg, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
+  --YouTube: hsl(348, 97%, 39%);
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  --Very-Dark-Blue-BG: hsl(0, 0%, 100%);
+  --Very-Dark-Blue-Top-BG: hsl(225, 100%, 98%);
+  --Dark-Desaturated-Blue-Card-BG: hsl(227, 47%, 96%);
+  --Desaturated-Blue-Text: hsl(228, 12%, 44%);
+  --White-Text: hsl(230, 17%, 14%);
+  --Color: hsl(228, 12%, 44%);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+[data-theme="dark"] {
+  /* Dark theme */
+  --Very-Dark-Blue-BG: hsl(230, 17%, 14%);
+  --Very-Dark-Blue-Top-BG: #20222f;
+  --Dark-Desaturated-Blue-Card-BG: hsl(228, 28%, 20%);
+  --Desaturated-Blue-Text: hsl(228, 34%, 66%);
+  --White-Text: hsl(0, 0%, 100%);
+  --Color: linear-gradient(45deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: "Quicksand", sans-serif;
+  background-color: var(--Very-Dark-Blue-BG);
+}
+.container {
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+.home {
+  width: 80%;
+  margin-top: 30px;
+  position: absolute;
+  top: 0;
+}
+.firstCard {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 50px;
+  margin-top: 40px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.secondCard {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 50px;
+  margin-bottom: 20px;
+  justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.divShadow {
+  z-index: -1;
+  width: 100%;
+  height: 240px;
+  min-height: 240px;
+  position: absolute;
+  top: 0;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: var(--Very-Dark-Blue-Top-BG);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Overview {
+  margin: 30px 0px;
+  color: var(--White-Text);
+}
+
+@media (max-width: 375px) {
+  .firstCard {
+    gap: 25px;
   }
-  to {
-    transform: rotate(360deg);
+  .secondCard {
+    gap: 25px;
   }
 }
